--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Hello world from HTML</h1>
+    <h1>Hello world from ejs</h1>
 </body>
 
 </html>
