#9 HTTP Request - mySQL connect config with MVC - View

--- a/src/views/test/index.ejs
+++ b/src/views/test/index.ejs
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Hello world from ejs</h1>
-    <img src="/image/IMG_1223.png" />
+    <%= dataUser %>
+        <img src="/image/IMG_1223.png" />
 </body>
 
 </html>
