--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Node.JS</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
@@ -17,11 +18,40 @@
     </div>
 
     <div style="padding-left:16px">
-        <h2>Top Navigation Example</h2>
-        <p>Some content..</p>
+        <h2>List users:</h2>
+        <%= dataUser %>
+
+        <div class="w3-container">
+            <h2>Hoverable Table</h2>
+          
+            <table class="w3-table-all w3-hoverable">
+              <thead>
+                <tr class="w3-light-grey">
+                  <th>First Name</th>
+                  <th>Last Name</th>
+                  <th>Points</th>
+                </tr>
+              </thead>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>94</td>
+              </tr>
+              <tr>
+                <td>Adam</td>
+                <td>Johnson</td>
+                <td>67</td>
+              </tr>
+            </table>
+          </div>
     </div>
 
-    <%= dataUser %>
+
 
 </body>
 
