--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -17,38 +17,31 @@
         <a href="#about">About</a>
     </div>
 
-    <div style="padding-left:16px">
-        <h2>List users:</h2>
+    <div>
         <%= dataUser %>
 
-        <div class="w3-container">
-            <h2>Hoverable Table</h2>
-          
-            <table class="w3-table-all w3-hoverable">
-              <thead>
-                <tr class="w3-light-grey">
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Points</th>
-                </tr>
-              </thead>
-              <tr>
-                <td>Jill</td>
-                <td>Smith</td>
-                <td>50</td>
-              </tr>
-              <tr>
-                <td>Eve</td>
-                <td>Jackson</td>
-                <td>94</td>
-              </tr>
-              <tr>
-                <td>Adam</td>
-                <td>Johnson</td>
-                <td>67</td>
-              </tr>
-            </table>
-          </div>
+            <div class="w3-container">
+                <h2>List users Table</h2>
+
+                <table class="w3-table-all w3-hoverable">
+                    <thead>
+                        <tr class="w3-light-grey">
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Points</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Jill</td>
+                            <td>Smith</td>
+                            <td>50</td>
+                        </tr>
+                    </tbody>
+
+
+                </table>
+            </div>
     </div>
 
 
