--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -26,9 +26,10 @@
                 <table class="w3-table-all w3-hoverable">
                     <thead>
                         <tr class="w3-light-grey">
+                            <th>ID</th>
                             <th>First Name</th>
                             <th>Last Name</th>
-                            <th>Points</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -37,8 +38,22 @@
                             <td>Smith</td>
                             <td>50</td>
                         </tr>
-                    </tbody>
+                        <%=dataUser.length %>
+                            <% for(let i=0; i < dataUser.length; i++) { %>
+                                <tr>
+                                    <td>
+                                        <%= dataUser[i].id %>
+                                    </td>
+                                    <td>
+                                        <%= dataUser[i].firstName %>
+                                    </td>
+                                    <td>
+                                        <%= dataUser[i].lastName %>
+                                    </td>
+                                </tr>
+                                <% } %>
 
+                    </tbody>
 
                 </table>
             </div>
