#10 Create Nav Table example

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,24 +31,25 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <% for(let i=0; i < dataUser.length; i++) { %>
-                        <tr>
-                            <td>
-                                <%= dataUser[i].id %>
-                            </td>
-                            <td>
-                                <%= dataUser[i].firstName %>
-                            </td>
-                            <td>
-                                <%= dataUser[i].lastName %>
-                            </td>
-                            <td>
-                                <button type="button">Detail</button>
-                                <button type="button">Edit</button>
-                                <button type="button">Delete</button>
-                            </td>
-                        </tr>
-                        <% } %>
+                    <%= test %>
+                        <% for(let i=0; i < dataUser.length; i++) { %>
+                            <tr>
+                                <td>
+                                    <%= dataUser[i].id %>
+                                </td>
+                                <td>
+                                    <%= dataUser[i].firstName %>
+                                </td>
+                                <td>
+                                    <%= dataUser[i].lastName %>
+                                </td>
+                                <td>
+                                    <button type="button">Detail</button>
+                                    <button type="button">Edit</button>
+                                    <button type="button">Delete</button>
+                                </td>
+                            </tr>
+                            <% } %>
 
                 </tbody>
 
