#10 Create Nav Table Detail

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -44,7 +44,7 @@
                             </td>
                             <td>
                                 <button type="button">
-                                    <a href="/detail/user/" target="_blank">
+                                    <a href="/detail/user/<%= dataUser[i].id %>" target="_blank">
                                         Detail
                                     </a>
                                 </button>
