--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -54,9 +54,31 @@
                         </tr>
                         <% } %>
 
-                </tbody> 
+                </tbody>
 
             </table>
+        </div>
+        <div class="create-user-container">
+            <div>Create a new user:</div>
+            <div>
+                <label>First Name:</label>
+                <input type="text" />
+            </div>
+
+            <div>
+                <label>Last Name:</label>
+                <input type="text" />
+            </div>
+
+            <div>
+                <label>Email:</label>
+                <input type="email" />
+            </div>
+
+            <div>
+                <label>Address:</label>
+                <input type="text" />
+            </div>
         </div>
     </div>
 
