--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -26,3 +26,13 @@ body {
     background-color: #04AA6D;
     color           : white;
 }
+
+.create-user-container {
+    padding   : 15px;
+    text-align: center;
+}
+
+.create-user-container label {
+    display: block;
+
+}
