--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -59,7 +59,7 @@
             </table>
         </div>
         <div class="create-user-container">
-            <div>Create a new user:</div>
+            <div><b>Create a new user:</b></div>
             <div>
                 <label>First Name:</label>
                 <input type="text" />
@@ -78,6 +78,10 @@
             <div>
                 <label>Address:</label>
                 <input type="text" />
+            </div>
+
+            <div>
+                <button type="button" class="btn-submit">Submit</button>
             </div>
         </div>
     </div>
