--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -59,30 +59,33 @@
             </table>
         </div>
         <div class="create-user-container">
-            <div><b>Create a new user:</b></div>
-            <div>
-                <label>First Name:</label>
-                <input type="text" />
-            </div>
+            <form action="/detail/user/1" method="GET">
+                <div><b>Create a new user:</b></div>
+                <div>
+                    <label>First Name:</label>
+                    <input type="text" />
+                </div>
 
-            <div>
-                <label>Last Name:</label>
-                <input type="text" />
-            </div>
+                <div>
+                    <label>Last Name:</label>
+                    <input type="text" />
+                </div>
 
-            <div>
-                <label>Email:</label>
-                <input type="email" />
-            </div>
+                <div>
+                    <label>Email:</label>
+                    <input type="email" />
+                </div>
 
-            <div>
-                <label>Address:</label>
-                <input type="text" />
-            </div>
+                <div>
+                    <label>Address:</label>
+                    <input type="text" />
+                </div>
 
-            <div>
-                <button type="button" class="btn-submit">Submit</button>
-            </div>
+                <div>
+                    <button type="submit" class="btn-submit">Submit</button>
+                </div>
+
+            </form>
         </div>
     </div>
 
