#12 Form and Post Request ...

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -59,7 +59,7 @@
             </table>
         </div>
         <div class="create-user-container">
-            <form action="/detail/user/1" method="POST">
+            <form action="/create-new-user" method="POST">
                 <div><b>Create a new user:</b></div>
                 <div>
                     <label>First Name:</label>
