--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -63,22 +63,22 @@
                 <div><b>Create a new user:</b></div>
                 <div>
                     <label>First Name:</label>
-                    <input type="text" />
+                    <input type="text" name="firstName" />
                 </div>
 
                 <div>
                     <label>Last Name:</label>
-                    <input type="text" />
+                    <input type="text" name="lastName" />
                 </div>
 
                 <div>
                     <label>Email:</label>
-                    <input type="email" />
+                    <input type="email" name="email" />
                 </div>
 
                 <div>
                     <label>Address:</label>
-                    <input type="text" />
+                    <input type="text" name="address" />
                 </div>
 
                 <div>
