--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -48,7 +48,7 @@
                                 </a>
                                 <button type="button">Edit</button>
                                 <form action="/delete-user" method="POST">
-                                    <button type="button">Delete</button>
+                                    <button type="submit">Delete</button>
                                 </form>
                             </td>
                         </tr>
