--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -46,7 +46,9 @@
                                 <a href="/detail/user/<%= dataUser[i].id %>" target="_blank">
                                     Detail
                                 </a>
-                                <button type="button">Edit</button>
+                                <form action="/edit-user/<%= dataUser[i].id %>" method="GET">
+                                    <button type="submit">Edit</button>
+                                </form>
                                 <form action="/delete-user" method="POST">
                                     <input type="text" hidden value="<%= dataUser[i].id %>" name="userId" />
                                     <button type="submit">Delete</button>
