--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -13,6 +13,21 @@
             <label>First Name:</label>
             <input />
         </div>
+
+        <div>
+            <label>Last Name:</label>
+            <input />
+        </div>
+
+        <div>
+            <label>Email:</label>
+            <input />
+        </div>
+
+        <div>
+            <label>Address:</label>
+            <input />
+        </div>
     </form>
 </body>
 
