--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -42,3 +42,11 @@ body {
     cursor    : pointer;
 
 }
+
+.update-user-container {
+    padding: 15px;
+}
+
+.update-user-container label {
+    display: block;
+}
