--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -5,30 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update user</title>
+    <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body>
-    <form>
-        <div>
-            <label>First Name:</label>
-            <input />
-        </div>
+    <div class="update-user-container">
+        <form>
+            <div>
+                <label>First Name:</label>
+                <input />
+            </div>
 
-        <div>
-            <label>Last Name:</label>
-            <input />
-        </div>
+            <div>
+                <label>Last Name:</label>
+                <input />
+            </div>
 
-        <div>
-            <label>Email:</label>
-            <input />
-        </div>
+            <div>
+                <label>Email:</label>
+                <input />
+            </div>
 
-        <div>
-            <label>Address:</label>
-            <input />
-        </div>
-    </form>
+            <div>
+                <label>Address:</label>
+                <input />
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
