#13 CRUD save button

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -44,9 +44,15 @@ body {
 }
 
 .update-user-container {
-    padding: 15px;
+    padding   : 15px;
+    text-align: center;
 }
 
 .update-user-container label {
     display: block;
+}
+
+.btn-save {
+    margin-top: 15px;
+    cursor    : pointer;
 }
