--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -30,6 +30,10 @@
                 <label>Address:</label>
                 <input />
             </div>
+
+            <div>
+                <button class="btn-save" type="submit">Save</button>
+            </div>
         </form>
     </div>
 </body>
