#13 CRUD getting data

--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -13,22 +13,22 @@
         <form>
             <div>
                 <label>First Name:</label>
-                <input />
+                <input name="firstName" value="<%= dataUser.firstName %>" />
             </div>
 
             <div>
                 <label>Last Name:</label>
-                <input />
+                <input name="lastNname" value="<%= dataUser.lastNname %>" />
             </div>
 
             <div>
                 <label>Email:</label>
-                <input />
+                <input name="email" value="<%= dataUser.email %>" />
             </div>
 
             <div>
                 <label>Address:</label>
-                <input />
+                <input name="address" value="<%= dataUser.address %>" />
             </div>
 
             <div>
