#13 CRUD getting data FIX BUG 2

--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -19,7 +19,7 @@
 
             <div>
                 <label>Last Name:</label>
-                <input name="lastNname" value="<%= dataUser.lastNname %>" />
+                <input name="lastName" value="<%= dataUser.lastName %>" />
             </div>
 
             <div>
