#13 CRUD SQL update by id

--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -31,6 +31,7 @@
                 <input name="address" value="<%= dataUser.address %>" />
             </div>
 
+            <input type="text" value="" hidden name="id" />
             <div>
                 <button class="btn-save" type="submit">Save</button>
             </div>
