--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -31,7 +31,7 @@
                 <input name="address" value="<%= dataUser.address %>" />
             </div>
 
-            <input type="text" value="" hidden name="id" />
+            <input type="text" value="<%= dataUser.id %>" hidden name="id" />
             <div>
                 <button class="btn-save" type="submit">Save</button>
             </div>
