--- a/src/views/uploadFile.ejs
+++ b/src/views/uploadFile.ejs
@@ -11,83 +11,12 @@
 
 <body>
     <div class="topnav">
-        <a class="active" href="/">Home</a>
-        <a href="/upload">Upload file</a>
+        <a href="/">Home</a>
+        <a href="/upload" class="active">Upload file</a>
     </div>
 
-    <div>
-        <div class="w3-container">
-            <h2>List users Table</h2>
-
-            <table class="w3-table-all w3-hoverable">
-                <thead>
-                    <tr class="w3-light-grey">
-                        <th>ID</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% for(let i=0; i < dataUser.length; i++) { %>
-                        <tr>
-                            <td>
-                                <%= dataUser[i].id %>
-                            </td>
-                            <td>
-                                <%= dataUser[i].firstName %>
-                            </td>
-                            <td>
-                                <%= dataUser[i].lastName %>
-                            </td>
-                            <td>
-                                <a href="/detail/user/<%= dataUser[i].id %>" target="_blank">
-                                    Detail
-                                </a>
-                                <form action="/edit-user/<%= dataUser[i].id %>" method="GET">
-                                    <button type="submit">Edit</button>
-                                </form>
-                                <form action="/delete-user" method="POST">
-                                    <input type="text" hidden value="<%= dataUser[i].id %>" name="userId" />
-                                    <button type="submit">Delete</button>
-                                </form>
-                            </td>
-                        </tr>
-                        <% } %>
-
-                </tbody>
-
-            </table>
-        </div>
-        <div class="create-user-container">
-            <form action="/create-new-user" method="POST">
-                <div><b>Create a new user:</b></div>
-                <div>
-                    <label>First Name:</label>
-                    <input type="text" name="firstName" />
-                </div>
-
-                <div>
-                    <label>Last Name:</label>
-                    <input type="text" name="lastName" />
-                </div>
-
-                <div>
-                    <label>Email:</label>
-                    <input type="email" name="email" />
-                </div>
-
-                <div>
-                    <label>Address:</label>
-                    <input type="text" name="address" />
-                </div>
-
-                <div>
-                    <button type="submit" class="btn-submit">Submit</button>
-                </div>
-
-            </form>
-        </div>
+    <div class="upload-file-container">
+        Hello Upload File
     </div>
 
 
