#15 Upload single file 6

--- a/src/views/uploadFile.ejs
+++ b/src/views/uploadFile.ejs
@@ -16,7 +16,10 @@
     </div>
 
     <div class="upload-file-container">
-        Hello Upload File
+        <form>
+            <label>Avatar:</label>
+            <input type="file" />
+        </form>
     </div>
 
 
