#15 Upload single file 7

--- a/src/views/uploadFile.ejs
+++ b/src/views/uploadFile.ejs
@@ -17,8 +17,13 @@
 
     <div class="upload-file-container">
         <form>
-            <label>Avatar:</label>
-            <input type="file" />
+            <div>
+                <label>Avatar:</label>
+                <input type="file" />
+            </div>
+            <div>
+                <button type="submit">Save file</button>
+            </div>
         </form>
     </div>
 
