#15 Upload single file 8

--- a/src/views/uploadFile.ejs
+++ b/src/views/uploadFile.ejs
@@ -22,7 +22,7 @@
                 <input type="file" />
             </div>
             <div>
-                <button type="submit">Save file</button>
+                <button button="btn-save" type="submit">Save file</button>
             </div>
         </form>
     </div>
