--- a/src/views/uploadFile.ejs
+++ b/src/views/uploadFile.ejs
@@ -16,10 +16,10 @@
     </div>
 
     <div class="upload-file-container">
-        <form>
+        <form method="POST" action="/upload-profile-pic" enctype="multipart/form-data">
             <div>
                 <label>Avatar:</label>
-                <input type="file" />
+                <input type="file" name="profile_pic" />
             </div>
             <div>
                 <button button="btn-save" type="submit">Save file</button>
