--- a/src/views/uploadFile.ejs
+++ b/src/views/uploadFile.ejs
@@ -25,6 +25,16 @@
                 <button button="btn-save" type="submit">Save file</button>
             </div>
         </form>
+
+        <form method="POST" action="/upload-multiple-images" enctype="multipart/form-data">
+            <div>
+                <label>Select multiple images:</label>
+                <input type="file" name="multiple_images" multiple />
+            </div>
+            <div>
+                <input type="submit" name="btn_upload_multiple_images" value="Upload" />
+            </div>
+        </form>
     </div>
 
 
