--- a/src/views/uploadFile.ejs
+++ b/src/views/uploadFile.ejs
@@ -16,20 +16,29 @@
     </div>
 
     <div class="upload-file-container">
+        <h1>Handling File Uploads using Express.js and Multer</h1>
         <form method="POST" action="/upload-profile-pic" enctype="multipart/form-data">
             <div>
-                <label>Avatar:</label>
-                <input type="file" name="profile_pic" />
+                <h3>Upload single image:</h3>
+                <div>
+                    <span>Select your profile picture:</span>
+                    <input type="file" name="profile_pic" />
+                </div>
             </div>
             <div>
-                <button button="btn-save" type="submit">Save file</button>
+                <button button="btn-save" type="submit">Upload</button>
             </div>
         </form>
 
+        <hr />
+
         <form method="POST" action="/upload-multiple-images" enctype="multipart/form-data">
             <div>
-                <label>Select multiple images:</label>
-                <input type="file" name="multiple_images" multiple />
+                <h3>Upload multiple images:</h3>
+                <div>
+                    <span>Select multiple images:</span>
+                    <input type="file" name="multiple_images" multiple />
+                </div>
             </div>
             <div>
                 <input type="submit" name="btn_upload_multiple_images" value="Upload" />
