--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -40,10 +40,13 @@
                             <td>
                                 <%= dataUser[i].lastName %>
                             </td>
-                            <td>
-                                <a href="/detail/user/<%= dataUser[i].id %>" target="_blank">
-                                    Detail
-                                </a>
+                            <td style="display: flex; gap: 15px;">
+                                <form>
+                                    <a class="btn-detail" href="/detail/user/<%= dataUser[i].id %>" target="_blank">
+                                        Detail
+                                    </a>
+                                </form>
+
                                 <form action="/edit-user/<%= dataUser[i].id %>" method="GET">
                                     <button type="submit">Edit</button>
                                 </form>
