--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
-<body>
+<body style="padding: 15px; ">
     <h1>404 Not Found</h1>
 </body>
 
